<resources>
    <string name="app_name">PlannerApp</string>
    <string name="welcome">Welcome</string>
    <string name="click_me">Add new note</string>
    <string name="another_click">Click here too</string>
    <string name="sum">Sum</string>
    <string name="editTextHint">Input info</string>
    <string name="eTDateHint">Input date</string>
    <string name="noteFragmentEt">New note:</string>
    <string name="confirmBtnText"> Add note </string>
    <string name="AddNewBtnContext"> Add new note </string>
    <string name="ButtonDateClick"> Set date </string>
    <string name="login_screen_log_in">Log in</string>
    <string name="login_screen_log_in_to_continue">Log in to continue</string>
    <string name="login_screen_email_login">Email/Login</string>
    <string name="login_screen_user_example_com">user@example.com</string>
    <string name="login_screen_password">Password</string>
    <string name="login_screen_password_hint">********</string>
    <string name="login_screen_btn_login">Login</string>
    <string name="cloud_title">Cloud</string>
    <string name="pick_action">Pick action</string>
    <string name="action_upload">Upload</string>
    <string name="action_download">Download</string>
    <string name="cloud_failed">Failed to download notes</string>
    <string name="cloud_success">Cloud operation successfully performed</string>
    <string name="export_notes">Export notes</string>
    <string name="import_notes">Import notes</string>
    <string name="btn_new_note">New note</string>
    <string name="delete_user">Delete User</string>
    <string name="log_out">Log Out</string>
    <string name="delete_request_title">Cloud storage</string>
    <string name="delete_request_message">Are you sure? All data will be removed from this devie!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cloud_options">Cloud options</string>
    <string name="time_picker_title">Please select time</string>
    <string name="time_picker_prefix">>></string>
    <string name="time_picker_suffix"> &lt;&lt; </string>
    <string name="btn_date_title">DATE</string>
    <string name="btn_time_title">TIME</string>
    <string name="notify">Notify</string>
    <string name="not_notify">Not notify</string>


</resources>