<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/login_screen_log_in"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/etUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignInToContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="8dp"
        android:text="@string/login_screen_log_in_to_continue"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignIn" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/login_screen_email_login"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/etUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <AutoCompleteTextView
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:hint="@string/login_screen_user_example_com"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:maxHeight="100dp"
        android:paddingStart="0dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tvUserPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:text="@string/login_screen_password"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/etPasswordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxHeight="50dp"
        app:layout_constraintBottom_toTopOf="@id/btnLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserName"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:background="@color/white"
            android:hint="@string/login_screen_password_hint"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_shape"
        android:text="@string/login_screen_btn_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>